--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Local folders
+HandfulConspectViewer/
+ML/
+Tools/
+Work/
+
+
+# All json
+*.json
