Update readme; simplify setup

--- a/StudyBot/config.yaml
+++ b/StudyBot/config.yaml
@@ -1,2 +1,2 @@
 db:
-  path: C:\Users\rodio\Desktop\Programming\Other\PythonPetProjects\StudyBot\leitner_base.db
+  path: /Users/Rodion.Khvorostov/Desktop/Prog/Other/pet_projects/StudyBot/leitner_base.db
